--- a/DYEat/src/main/resources/templates/views/main/index.html
+++ b/DYEat/src/main/resources/templates/views/main/index.html
@@ -42,18 +42,20 @@
                     <h2 style="text-align: left;font-family: Adamina, serif;font-weight: bold;">정기 배송 한정식</h2>
                     <p class="w-lg-50"></p>
                 </div>
-                <div class="col-lg-4 col-xxl-4 d-lg-flex justify-content-lg-end align-items-lg-center" style="text-align: center;"><a th:href="@{/order}" style="text-decoration: none;">
+                <div class="col-lg-4 col-xxl-4 d-lg-flex justify-content-lg-end align-items-lg-center"
+                     style="text-align: center;"><a th:href="@{/order/list}" style="text-decoration: none;">
                     <p style="text-align: center;font-family: Adamina, serif;"><i class="fas fa-plus-square"></i>더보기</p>
                 </a></div>
             </div>
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                <div class="col offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
-                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
-                </a></div>
-                <div class="col offset-xxl-2 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
-                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                <div th:each="Menulist : ${menuData}" class="col offset-xxl-1 item"><a
+                        th:href="@{/order/{id}/detail (id=${Menulist.id})}"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
+                        <span style="background-color: rgba(255, 255, 255, 0);" th:text="${Menulist.title}"></span></h2>
+                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;"
+                       th:text="${Menulist.price}"></p>
                 </a></div>
             </div>
         </div>
@@ -65,17 +67,24 @@
                     <h2 style="text-align: left;font-family: Adamina, serif;"><strong>정기 배송 간단식</strong></h2>
                     <p class="w-lg-50"></p>
                 </div>
-                <div class="col-lg-4 d-lg-flex justify-content-lg-end align-items-lg-center"><a href="#" style="text-decoration: none;">
+                <div class="col-lg-4 d-lg-flex justify-content-lg-end align-items-lg-center"><a href="#"
+                                                                                                style="text-decoration: none;">
                     <p style="text-align: right;font-family: Adamina, serif;"><i class="fas fa-plus-square"></i>더보기</p>
                 </a></div>
             </div>
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                <div class="col offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                                      style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
-                <div class="col offset-xxl-2 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col offset-xxl-2 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                                                      style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
             </div>
@@ -88,33 +97,58 @@
                     <h2 style="text-align: left;font-family: Adamina, serif;"><strong>단품 메뉴</strong></h2>
                     <p class="w-lg-50"></p>
                 </div>
-                <div class="col-lg-4 d-lg-flex justify-content-lg-end align-items-lg-center"><a href="#" style="text-decoration: none;">
+                <div class="col-lg-4 d-lg-flex justify-content-lg-end align-items-lg-center"><a href="#"
+                                                                                                style="text-decoration: none;">
                     <p style="text-align: right;font-family: Adamina, serif;"><i class="fas fa-plus-square"></i>더보기</p>
                 </a></div>
             </div>
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a
+                        href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
-                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a
+                        href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
-                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a
+                        href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
-                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a
+                        href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
-                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a
+                        href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
-                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
-                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a
+                        href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span
+                            style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                 </a></div>
             </div>
@@ -123,7 +157,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-xxl-12 offset-xxl-0">
-                <h2 style="text-align: left;font-family: Adamina, serif;padding-left: 0px;margin-left: 44px;"><strong>리뷰</strong></h2><a href="#" style="text-decoration: none;">
+                <h2 style="text-align: left;font-family: Adamina, serif;padding-left: 0px;margin-left: 44px;">
+                    <strong>리뷰</strong></h2><a href="#" style="text-decoration: none;">
                 <p style="text-align: right;font-family: Adamina, serif;"><i class="fas fa-plus-square"></i>더보기</p>
             </a>
             </div>
@@ -150,12 +185,13 @@
     <!-- Products End -->
 
 
-
     <!-- Footer Start -->
     <footer>
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
-                <p class="links"><a href="#">Home</a><strong> · </strong><a href="#">Blog</a><strong> · </strong><a href="#">Pricing</a><strong> · </strong><a href="#">About</a><strong> · </strong><a href="#">Faq</a><strong> · </strong><a href="#">Contact</a></p>
+                <p class="links"><a href="#">Home</a><strong> · </strong><a href="#">Blog</a><strong> · </strong><a
+                        href="#">Pricing</a><strong> · </strong><a href="#">About</a><strong> · </strong><a
+                        href="#">Faq</a><strong> · </strong><a href="#">Contact</a></p>
                 <p class="company-name"></p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
@@ -166,13 +202,14 @@
                     <p class="footer-center-info email text-start">1234-5678</p>
                 </div>
                 <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                    <p> <a href="#" target="_blank">dmstjd0214@naver.com</a></p>
+                    <p><a href="#" target="_blank">dmstjd0214@naver.com</a></p>
                 </div>
             </div>
             <div class="col-md-4 footer-about">
                 <h4>간단한 포트폴리오입니다.</h4>
                 <p> 이쁘게 봐주세요 !</p>
-                <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-github"></i></a></div>
+                <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
+                        class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-github"></i></a></div>
             </div>
         </div>
     </footer>
