--- a/DYEat/src/main/resources/templates/views/order/orderDetail.html
+++ b/DYEat/src/main/resources/templates/views/order/orderDetail.html
@@ -11,8 +11,8 @@
     <div class="container-fluid top-container">
         <div class="row">
             <div class="col-12 col-md-6 col-xl-4 offset-xl-2">
-                <div class="img-container"><img class="rounded" id="expandedImg" style="width:100%"
-                                                src="assets/img/img1-min.jpg">
+                <div class="img-container"><img class="rounded" id="expandedImg" width="450px" height="450px"
+                                                th:src="|/images/${menuId.picture}|">
                     <div id="imgtext"></div>
                 </div>
                 <div class="row img-row" style="padding-right: 10px;padding-left: 10px;">
@@ -25,14 +25,6 @@
                 <h1 th:text="${menuId.title}"></h1>
                 <h3 th:text="|${menuId.price}원|"></h3>
                 <p th:text="${menuId.text}" style="font-size: 20px;"></p>
-                <ul>
-                    <li>Fit type: men, women, kids<br></li>
-                    <li>Sizes: XS to 4XL<br></li>
-                    <li>Machine wash cold, dry low heat<br></li>
-                    <li>Lightweight<br></li>
-                    <li>Classic fit<br></li>
-                </ul>
-                <li>Double-needle sleeve and bottom hem<br></li>
             </div>
         </div>
     </div>
@@ -56,7 +48,10 @@
     <div class="col offset-xxl-1" style="width: 83%;">
         <hr>
         <h4 id="scrollspyHeading1">상세정보</h4>
-        <p>...</p>
+        <div class="text-center"><img src="/assets/img/exam1/exam1.jpg" width="700"/></div>
+        <div class="text-center"><img src="/assets/img/exam1/exam2.jpg" width="700"/></div>
+        <div class="text-center"><img src="/assets/img/exam1/exam3.jpg" width="700"/></div>
+        <div class="text-center"><img src="/assets/img/exam1/exam4.jpg" width="700"/></div>
         <hr>
         <h4 id="scrollspyHeading2">구매평</h4>
         <div class="container">
@@ -87,52 +82,112 @@
         <hr>
         <h4 id="scrollspyHeading3">Q&amp;A</h4>
     </div>
-    <nav class="navbar navbar-light navbar-expand fixed-bottom bg-white" style="border-top: 1px solid rgb(170,170,170);">
-        <div class="container-fluid"><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-light navbar-expand fixed-bottom bg-white"
+         style="border-top: 1px solid rgb(170,170,170);">
+        <div class="container-fluid">
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-2"><span
+                    class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div id="navcol-2" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-share-alt"></i></a></li>
-                    <li class="nav-item d-flex"><a class="nav-link d-xl-flex justify-content-xl-center" href="#"><i class="fas fa-shopping-cart d-xl-flex align-items-xl-center"></i>장바구니</a></li>
+                    <li class="nav-item d-flex"><a class="nav-link d-xl-flex justify-content-xl-center" href="#"><i
+                            class="fas fa-shopping-cart d-xl-flex align-items-xl-center"></i>장바구니</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item d-xl-flex align-items-xl-center" style="font-size: 26px;">
-                        <p class="d-xl-flex align-items-xl-center" style="margin-bottom: 0px;color: rgb(69,77,85);">가격 </p>
+                        <p class="d-xl-flex align-items-xl-center" style="margin-bottom: 0px;color: rgb(69,77,85);">
+                            가격 </p>
                     </li>
                     <li class="nav-item d-xl-flex align-items-xl-center">
-                        <p class="d-xl-flex align-items-xl-center" style="margin-bottom: 0px;font-size: 20px;">10,000원</p>
+                        <p class="d-xl-flex align-items-xl-center" style="margin-bottom: 0px;font-size: 20px;"
+                           th:text="|${menuId.price}원|"></p>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" href="#"><button class="btn btn-primary border rounded" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-1" style="font-size: 25px;background: rgb(86,87,89);">구매하기</button></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">
+                        <button class="btn btn-primary border rounded" type="button" data-bs-toggle="offcanvas"
+                                data-bs-target="#offcanvas-1" style="font-size: 25px;background: rgb(86,87,89);">구매하기
+                        </button>
+                    </a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div id="offcanvas-1" class="offcanvas offcanvas-bottom" tabindex="-1" data-bs-backdrop="false" style="height: 378.1px;margin: 84px;padding: 0px;width: 100%;margin-left: 0px;">
+    <div id="offcanvas-1" class="offcanvas offcanvas-bottom" tabindex="-1" data-bs-backdrop="false"
+         style="height: 378.1px;margin: 84px;padding: 0px;width: 100%;margin-left: 0px;margin-top: 0px;margin-bottom: 6px;">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title">주문하기</h5><button class="btn-close text-reset" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <h5 class="offcanvas-title">주문하기</h5>
+            <button class="btn-close text-reset" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
-            <form class="mt-4" style="width: 50%;">
+        <div class="offcanvas-body d-xxl-flex justify-content-xxl-center">
+            <form th:action="@{/order/buy}" method="post" class="mt-4" style="width: 100%;">
                 <div class="form-group mb-3">
-                    <div class="input-group"><span class="text-primary input-group-text"><i class="fa fa-motorcycle"></i></span><select class="form-select">
+                    <div class="input-group"><span class="text-primary input-group-text"><i
+                            class="fa fa-motorcycle"></i></span>
+
+                        <select name="how" class="form-select">
                         <option value="undefined" selected>배송을 선택해주세요</option>
-                        <option value="1">전날에 배송</option>
-                        <option value="2">오전 배송</option>
+                        <option value="전날 배송">전날 배송</option>
+                        <option value="오전 배송">오전 배송</option>
                     </select></div>
                 </div>
                 <div class="form-group mb-3">
-                    <div class="input-group"><span class="text-primary input-group-text"><i class="fa fa-calendar-o"></i></span><select class="form-select">
+                    <div class="input-group"><span class="text-primary input-group-text"><i
+                            class="fa fa-calendar-o"></i></span>
+                        <select name="wantdate" class="form-select">
                         <option value="undefined" selected>날짜를 입력해주세요</option>
-                        <option value="12">This is item 1</option>
-                        <option value="13">This is item 2</option>
-                        <option value="14">This is item 3</option>
-                    </select></div>
+                        <option value="월요일">월</option>
+                        <option value="화요일">화</option>
+                        <option value="수요일">수</option>
+                        <option value="목요일">목</option>
+                        <option value="금요일">금</option>
+                    </select>
+                    </div>
+                    <br>
+                    <div class="d-flex justify-content-start">
+                        <label class="form-label">수량 : </label>
+                        <input type='button'
+                               onclick='count("plus")'
+                               value='+'/>
+                        <div id='result'>1</div>
+                        <input type='button'
+                               onclick='count("minus")'
+                               value='-'/>
+                    </div>
                 </div>
-                <div class="form-group mb-3">
-                    <div class="input-group"><span class="text-primary input-group-text"><i class="fa fa-lock"></i></span><input class="form-control" type="password" required placeholder="Password" /></div>
+                <div class="d-flex justify-content-start">
+                    <label name="price" class="form-label">가격 : </label><input style="border: 0px" type="text" id='price'
+                                                                  name="price" th:value="|${menuId.price}|" readonly/>
+                    <input id='stop_price' name="price" hidden="hidden" th:value="|${menuId.price}|"/>
                 </div>
-                <div class="form-group mb-3"></div>
+                <button class="btn btn-primary" type="submit">구매하기</button>
             </form>
         </div>
     </div>
     </body>
+    <script>
+        function count(type) {
+            // 결과를 표시할 element
+            const resultElement = document.getElementById('result');
+            const priceElement = document.getElementById('price');
+            const stop_priceElement = document.getElementById('stop_price');
+
+            // 현재 화면에 표시된 값
+            let number = resultElement.innerText;
+            let price = priceElement.value;
+            let stop_price = stop_priceElement.value;
+
+            // 더하기/빼기
+            if (type === 'plus') {
+                number = parseInt(number) + 1;
+                price = parseInt(stop_price) * parseInt(number);
+
+            } else if (type === 'minus' && number > 1) {
+                number = parseInt(number) - 1;
+                price = parseInt(price) - parseInt(stop_price);
+
+            }
+            // 결과 출력
+            resultElement.innerText = number
+            priceElement.value = price
+        }
+    </script>
 </th:block>
